2001-10-23  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: limit 'adding to actor container' warnings to party

2001-10-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.h: added 'GAME_SI' and 'GAME_BG' macros for checking gametype
	* intrinsics.cc: update_last_created returns obj* in SI
	* ucinternal.cc: added warning message

2001-10-22  Tristan Tarrant  <nadir@users.sourceforge.net>
	* gamewin.*, gumps/GameplayOptions_gump.*, usecode/conversation.cc:
	implemented "Text Background" feature which puts a dark backdrop
	behind conversations. There is also an entry in the Gameplay Options
	menu for it.
	* gumps/VideoOptions_gump.cc, data/vid_resolution.shp: added 640x480
	as a "valid" entry

2001-10-21  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc,intrinsics.cc: Skip egg-activation if teleported via
	egg that exits Mountains of Freedom.

2001-10-20  Jeff Freedman  <jeff@amy.nerble.net>

	* ucinternal.cc:  Major 'global flag' kludge for SI/Monk Isle endlessly 
	looping Usecode 
	* gamewin.cc: Emulate_cacheout() terminates scripts.
	* usecode/ucsched.h (public): Purge() terminates scripts for
	objs. that are too far away.

2001-10-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc: clear screen on 'return to menu'

2001-10-21  Max Horn  <max@quendi.de>

	* Removed all files from macosx/ except exult.icns - we don't need them anymore

2001-10-20  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (public): Better testing for occupied chair.

	* actions.cc,paths.cc:  Changed interface; changed pathfinder to
	use correct test for being blocked.

2001-10-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* barge.cc: barges no longer pick up eggs

2001-10-20  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc (Combat_schedule): Camera actor should never give up.
	* keyactions.cc: HOME should center around 'camera_actor'.
